contrast fix

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body {
 	margin-top: 20px;
 	width: 193px;
 	height: 52px;
-	background: #4d5b9e;
+	background: #424f88;
 	border-radius: 12px;
 	font-size: 16px;
 	text-align: center;
@@ -127,7 +127,7 @@ body {
   margin-top: 20px;
 	width: 193px;
 	height: 52px;
-	background: #4d5b9e;
+	background: #424f88;
 	border-radius: 12px;
 	font-size: 16px;
 	text-align: center;
